--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <div class = "row">
 
 <div class="col-md-6 well">
-<h1>Join</h1>
+<h1>Register</h1>
 <% if flash[:errorsUser] %>
 	<% flash[:errorsUser].each do |e| %>
 		<p><%= e %></p>
@@ -22,7 +22,7 @@
 
 <div class="col-md-6  well">
 
-<h1>Login Screen</h1>
+<h1>Login</h1>
 <% if flash[:errorsLogin] %>
 	<% flash[:errorsLogin].each do |e| %>
 		<p><%= e %></p>
