--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,46 @@
 <div class = "container">
+  <div class = "row">
+
+  <div class="col-md-3">
+  <a href="/songs">Dashboard</a>
+  </div>
+   |
+  <div class="col-md-2">
+  <form  action="/sessions/<%=(session[:user_id])%>" method='post'>
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="hidden" name="_method" value="delete">
+    <input type='submit' value='Logoff' />
+  </form>
+  </div>
+
+  </div>
 <div class = "row">
 
   <div class="col-md-9">
-      <h2>Hi: <%= @user.first_name %></h2>
+      <h2><%= @user.first_name %> <%= @user.last_name %> PLaylist</h2>
   </div>
+</div>
+<div class = "row">
+
+<div class="col-md-8">
+<table class="table well">
+  <tr>
+    <th>Artist</th>
+    <th>Title</th>
+    <th>Times Added</th>
+  </tr>
+
+  <% @allLikes.each do |like| %>
+  <tr>
+    <td><%= like.song.artist %></td>
+    <td><%= like.song.title %></td>
+    <td><%= like.count %></td>
+    <td>
+
+    </td>
+  </tr>
+  <%end%>
+</table>
+</div>
 </div>
 </div>
